Worked on responsiveness and added hamburger menu logic

--- a/styles/sass/abstract/_variables.scss
+++ b/styles/sass/abstract/_variables.scss
@@ -17,3 +17,7 @@ $neutral-very-dark-grayish-blue: hsl(213, 9%, 39%);
 $neutral-dark-grayish-blue: hsl(232, 10%, 55%);
 $neutral-grayish-blue: hsl(210, 4%, 67%);
 $neutral-white: hsl(0, 0%, 100%);
+
+// HELPER CLASSES
+
+.show {display: flex!important;}
