--- a/styles/sass/layout/_page.scss
+++ b/styles/sass/layout/_page.scss
@@ -19,45 +19,153 @@
         }
     }
 
-    &__about {
-        width: 50vw;
-        &__text {
+    .sections {
+        // display: grid;
+        // grid-template:
+        //     "a b"
+        //     "c d"
+        //     "e f";
+    }
 
+    &__about {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+
+        &__text {
+        
         }
     }
 
     &__services {
         display: grid;
-        grid-template: 
-            "50vw 50vw"
-            "50vw 50vw";
+        grid-template-columns: 1fr 1fr;
+
+        img {
+            width: 100%;
+            height: auto;
+
+            grid-column-start: 2;
+            grid-column-end: 3;
+            grid-row-start: 1;
+            grid-row-end: 2;
+        }
+
         &__text {
-
-        }
-
-        &__graphic-design {
-            background: url(../../../images/desktop/image-graphic-design.jpg) no-repeat;
-            // background-size: ;
-            // width: 720px;
-            // height: 600px;
-            
-            h3 {
-                
-            }
-
-            p {}
-        }
-
-        &__photography {
-            background: url(../../../images/desktop/image-photography.jpg) no-repeat;
-            // width: 720px;
-            // height: 600px;
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 1;
+            grid-row-end: 2;
         }
     }
 
-    &__testimonials {}
+    &__gdp {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        &__container {
+            // background: url(../../../images/desktop/image-graphic-design.jpg) no-repeat;
+            // background-size: 100%;
+            // width: auto;
+            // height: inherit;
+            position: relative;
+            text-align: center;
+
+            img {
+                position: relative;
+                width: 100%;
+            }
+            
+            &__content {
+                position: absolute;
+                top: 70%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+                h3 {
+                    
+                }
+    
+                p {}
+            }
+        }
+
+        // &__photography {
+        //     position: relative;
+        //     text-align: center;
+
+        //     img {
+        //         width: 100%;
+        //     }
+
+        //     &__content {
+        //         position: absolute;
+        //         top: 50%;
+        //         left: 50%;
+        //         transform: translate(-50%, -50%);
+
+        //         h3 {}
+
+        //         p {}
+        //     }
+        // }
+    }
+
+    &__testimonials {
+        display: grid;
+        place-items: center;
+
+        &__grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            width: 80%;
+
+            &__col {
+                text-align: center;
+
+                img {}
+
+                p {}
+
+                &__user {
+                    
+                    h4 {}
+
+                    p {}
+                }
+            }
+        }
+    }
 }
 
+footer {
+    background-color: $primary-dark-moderate-cyan;
+    padding: 2rem 0;
+    display: grid;
+    place-items: center;
+    gap: 2rem;
+
+
+    svg {}
+
+    .footer {
+        &__link {
+
+            a {}
+        }
+    
+        &__socials {
+    
+            img {
+                fill: $primary-dark-desaturated-cyan;
+            }
+        }
+    }
+}
 
 
 @media (max-width: 850px) {
@@ -67,6 +175,69 @@
             background-size: cover;
             background-position: center;
             height: 100vh;
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    .page {
+
+        &__about {
+            grid-template-columns: 1fr;
+    
+            img {
+
+            }
+    
+            &__text {
+            
+            }
+        }
+    
+        &__services {
+            grid-template-columns: 1fr;
+    
+            &__text {
+                grid-column-start: unset;
+                grid-column-end: unset;
+                grid-row-start: unset;
+                grid-row-end: unset;
+            }
+    
+            img {
+                grid-column-start: unset;
+                grid-column-end: unset;
+                grid-row-start: unset;
+                grid-row-end: unset;
+            }
+        }
+    
+        &__gdp {
+            grid-template-columns: 1fr;
+            
+            &__container {
+    
+                img {
+                    
+                }
+                
+                &__content {
+    
+                    h3 {
+                        
+                    }
+        
+                    p {}
+                }
+            }
+        }
+
+        &__testimonials {
+
+            &__grid {
+                grid-template-columns: unset;
+                grid-template-rows: 1fr 1fr 1fr;
+            }
         }
     }
 }
