--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap");
+.show {
+  display: flex !important; }
+
 *,
 *::before,
 *::after {
@@ -41,7 +44,7 @@
     display: flex;
     align-items: center;
     gap: 2.5rem; }
-  .navbar svg.hamburger-menu-icon {
+  .navbar svg#hamburger-menu-icon {
     display: none; }
 
 @media (max-width: 850px) {
@@ -49,7 +52,7 @@
     gap: 2rem;
     flex-direction: column;
     position: fixed;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
@@ -65,7 +68,7 @@
       border-bottom: 15px solid white;
       top: -28px;
       right: 0; }
-  .navbar svg.hamburger-menu-icon {
+  .navbar svg#hamburger-menu-icon {
     display: block; } }
 
 .page__landing {
@@ -80,15 +83,61 @@
     place-self: center; }
 
 .page__about {
-  width: 50vw; }
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+  .page__about img {
+    width: 100%;
+    height: auto; }
 
 .page__services {
   display: grid;
-  grid-template: "50vw 50vw" "50vw 50vw"; }
-  .page__services__graphic-design {
-    background: url(../../../images/desktop/image-graphic-design.jpg) no-repeat; }
-  .page__services__photography {
-    background: url(../../../images/desktop/image-photography.jpg) no-repeat; }
+  grid-template-columns: 1fr 1fr; }
+  .page__services img {
+    width: 100%;
+    height: auto;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2; }
+  .page__services__text {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2; }
+
+.page__gdp {
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+  .page__gdp__container {
+    position: relative;
+    text-align: center; }
+    .page__gdp__container img {
+      position: relative;
+      width: 100%; }
+    .page__gdp__container__content {
+      position: absolute;
+      top: 70%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+
+.page__testimonials {
+  display: grid;
+  place-items: center; }
+  .page__testimonials__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 80%; }
+    .page__testimonials__grid__col {
+      text-align: center; }
+
+footer {
+  background-color: #458c7e;
+  padding: 2rem 0;
+  display: grid;
+  place-items: center;
+  gap: 2rem; }
+  footer .footer__socials img {
+    fill: #25564b; }
 
 @media (max-width: 850px) {
   .page__landing {
@@ -96,3 +145,24 @@
     background-size: cover;
     background-position: center;
     height: 100vh; } }
+
+@media (max-width: 650px) {
+  .page__about {
+    grid-template-columns: 1fr; }
+  .page__services {
+    grid-template-columns: 1fr; }
+    .page__services__text {
+      grid-column-start: unset;
+      grid-column-end: unset;
+      grid-row-start: unset;
+      grid-row-end: unset; }
+    .page__services img {
+      grid-column-start: unset;
+      grid-column-end: unset;
+      grid-row-start: unset;
+      grid-row-end: unset; }
+  .page__gdp {
+    grid-template-columns: 1fr; }
+  .page__testimonials__grid {
+    grid-template-columns: unset;
+    grid-template-rows: 1fr 1fr 1fr; } }
