--- a/styles/sass/layout/_navbar.scss
+++ b/styles/sass/layout/_navbar.scss
@@ -12,7 +12,7 @@
        gap: 2.5rem;
     }
 
-    svg.hamburger-menu-icon {
+    svg#hamburger-menu-icon {
         display: none;
     }
 }
@@ -30,7 +30,7 @@
             gap: 2rem;
             flex-direction: column;
             position: fixed;
-            top: 40%;
+            top: 45%;
             left: 50%;
             transform: translate(-50%, -50%);
 
@@ -52,7 +52,7 @@
             }
         }
     
-        svg.hamburger-menu-icon {
+        svg#hamburger-menu-icon {
             display: block;
         }
     }
